# eth-epigen

./: .gitignore
.helix/: config.toml
utils/: rmarkdown_render.sh  setup_xtendr_lib.md
week01/: assignment.Rmd  assignment.html  install.R
week01/thingdoer/: DESCRIPTION  NAMESPACE
week01/thingdoer/R/: extendr-wrappers.R
week01/thingdoer/man/: add.Rd  do_the_thing.Rd
week01/thingdoer/src/: entrypoint.c
week01/thingdoer/src/rust/src/: lib.rs
week02/: README.md  assignment.Rmd  assignment.html  practical.Rmd
week02/thingdoer/: NAMESPACE
week02/thingdoer/R/: extendr-wrappers.R
week02/thingdoer/man/: do_the_thing.Rd
week02/thingdoer/src/: Makevars.in  Makevars.win.in  thingdoer-win.def
week02/thingdoer/src/rust/: Cargo.toml
week02/thingdoer/src/rust/src/: lib.rs  schema.rs
